[package]
name = "llrt_dns"
description = "LLRT Module dns"
version = "0.8.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"
readme = "README.md"

[lib]
name = "llrt_dns"
path = "src/lib.rs"

[dependencies]
either = { version = "1", default-features = false }
llrt_context = { version = "0.8.0-beta", path = "../../libs/llrt_context" }
llrt_hooking = { version = "0.8.0-beta", path = "../../libs/llrt_hooking" }
llrt_utils = { version = "0.8.0-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { version = "0.11", features = [
  "macro",
  "either",
], default-features = false }
tokio = { version = "1", features = ["net"], default-features = false }

[dev-dependencies]
llrt_test = { path = "../../libs/llrt_test" }
tokio = { version = "1", features = [
  "macros",
  "test-util",
], default-features = false }
