[package]
name = "llrt_events"
description = "LLRT Module events"
version = "0.3.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_events"
path = "src/lib.rs"

[dependencies]
llrt_utils = { version = "0.3.0-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", rev = "c2521712219b40bf9ba9836c082919ec855d0284", features = [
  "macro",
], default-features = false }
tracing = "0.1"
