[package]
name = "llrt_exceptions"
description = "LLRT Module exception"
version = "0.4.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_exceptions"
path = "src/lib.rs"

[dependencies]
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.8.1", features = [
  "macro",
], default-features = false }
llrt_utils = { version = "0.4.0-beta", path = "../../libs/llrt_utils", default-features = false }
