[package]
name = "llrt_exceptions"
description = "LLRT Module exception"
version = "0.6.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_exceptions"
path = "src/lib.rs"

[dependencies]
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", features = [
  "macro",
], default-features = false }
llrt_utils = { version = "0.6.1-beta", path = "../../libs/llrt_utils", default-features = false }
