[package]
name = "llrt_exceptions"
description = "LLRT Module exception"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_exceptions"
path = "src/lib.rs"

[dependencies]
rquickjs = { version = "0.11", default-features = false }
llrt_utils = { version = "0.8.1-beta", path = "../../libs/llrt_utils", default-features = false }
